<resources>

    <string name="app_name">SociApp</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="title_activity_whole_setting2">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="profilesetting"> Profile Setting </string>
    <string name="changepassword"> Change Password </string>
    <string name="publiccontrols"> Public Controls </string>
    <string name="bugreport"> Report Problem </string>
    <string name="about">About</string>
    <string name="sociappmessage">SociApp brings you close with people you care about!</string>

</resources>
